--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.marcosmendes</groupId>
 	<artifactId>spring-customer-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>spring-customer-api</name>
 	<description>A Spring Boot API for Customer Management 👨🏻‍💻</description>
 	<properties>
