--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ bucket4j.filters[0].rate-limits[0].bandwidths[0].time=10
 bucket4j.filters[0].rate-limits[0].bandwidths[0].unit=seconds
 bucket4j.filters[0].rate-limits[0].bandwidths[0].fixed-refill-interval=0
 bucket4j.filters[0].rate-limits[0].bandwidths[0].fixed-refill-interval-unit=seconds
+
+cors.origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:3000}
